--- a/src/main/resources/com/restaurant/system/restaurantmanagingsystem/hello-view.fxml
+++ b/src/main/resources/com/restaurant/system/restaurantmanagingsystem/hello-view.fxml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
+<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.restaurant.system.restaurantmanagingsystem.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <Label text="Éttermi Menü" style="-fx-font-size: 20px; -fx-font-weight: bold;"/>
+
+    <TableView fx:id="menuTable" prefHeight="400.0" prefWidth="600.0">
+        <columns>
+            <TableColumn fx:id="nameColumn" text="Étel név" prefWidth="200.0" />
+            <TableColumn fx:id="priceColumn" text="Ár (Ft)" prefWidth="100.0" />
+            <TableColumn fx:id="categoryColumn" text="Kategória" prefWidth="150.0" />
+        </columns>
+    </TableView>
 </VBox>
