--- a/src/main/resources/com/restaurant/system/restaurantmanagingsystem/hello-view.fxml
+++ b/src/main/resources/com/restaurant/system/restaurantmanagingsystem/hello-view.fxml
@@ -25,5 +25,6 @@
         <TextField fx:id="priceField" promptText="Ár" prefWidth="80.0" />
         <ComboBox fx:id="categoryComboBox" promptText="Válassz kategóriát" prefWidth="150.0" />
         <Button text="Hozzáadás" onAction="#onAddButtonClick" style="-fx-background-color: #4CAF50; -fx-text-fill: white;"/>
+        <Button text="Törlés" onAction="#onDeleteButtonClick" style="-fx-background-color: #f44336; -fx-text-fill: white;"/>
     </HBox>
 </VBox>
