--- a/src/main/resources/com/restaurant/system/restaurantmanagingsystem/hello-view.fxml
+++ b/src/main/resources/com/restaurant/system/restaurantmanagingsystem/hello-view.fxml
@@ -10,7 +10,7 @@
                 <padding><Insets top="20" right="20" bottom="20" left="20"/></padding>
                 <Label text="Folyamatban lévő rendelések" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
 
-                <TableView fx:id="activeOrdersTable" prefHeight="300.0">
+                <TableView fx:id="activeOrdersTable" prefHeight="200.0">
                     <columns>
                         <TableColumn fx:id="orderIdColumn" text="ID" prefWidth="50.0" />
                         <TableColumn fx:id="orderTableColumn" text="Asztal" prefWidth="70.0" />
@@ -18,6 +18,11 @@
                         <TableColumn fx:id="orderTotalColumn" text="Összeg" prefWidth="100.0" />
                     </columns>
                 </TableView>
+
+                <VBox spacing="5" alignment="CENTER_LEFT">
+                    <Label text="Rendelés tételei (kattints egy sorra fent):" style="-fx-font-weight: bold;" />
+                    <ListView fx:id="activeOrderDetailsList" prefHeight="150.0" />
+                </VBox>
 
                 <HBox spacing="20" alignment="CENTER">
                     <Button text="Frissítés" onAction="#refreshActiveOrders" style="-fx-background-color: #607D8B; -fx-text-fill: white;"/>
