fix NullPointerException by adding TableColumns to activeOrdersTable in FXM

--- a/src/main/resources/com/restaurant/system/restaurantmanagingsystem/hello-view.fxml
+++ b/src/main/resources/com/restaurant/system/restaurantmanagingsystem/hello-view.fxml
@@ -53,10 +53,10 @@
 
                 <TableView fx:id="activeOrdersTable" prefHeight="200.0">
                     <columns>
-                        <TableColumn fx:id="orderIdColumn" text="ID" prefWidth="50.0" />
-                        <TableColumn fx:id="orderTableColumn" text="Asztal" prefWidth="70.0" />
-                        <TableColumn fx:id="orderTimeColumn" text="Időpont" prefWidth="150.0" />
-                        <TableColumn fx:id="orderTotalColumn" text="Összeg" prefWidth="100.0" />
+                        <TableColumn fx:id="orderIdColumn" text="ID" prefWidth="50" />
+                        <TableColumn fx:id="orderTableColumn" text="Asztal" prefWidth="70" />
+                        <TableColumn fx:id="orderTimeColumn" text="Időpont" prefWidth="150" />
+                        <TableColumn fx:id="orderTotalColumn" text="Végösszeg" prefWidth="100" />
                     </columns>
                 </TableView>
 
@@ -65,7 +65,8 @@
                     <ListView fx:id="activeOrderDetailsList" prefHeight="150.0" />
                 </VBox>
 
-                <HBox spacing="20" alignment="CENTER">
+                <HBox spacing="10" alignment="CENTER">
+                    <Button text="Tétel módosítása/törlése" onAction="#handleEditOrderItem" style="-fx-background-color: #FF9800; -fx-text-fill: white;"/>
                     <Button text="Frissítés" onAction="#refreshActiveOrders" style="-fx-background-color: #607D8B; -fx-text-fill: white;"/>
                     <Button text="Fizetés / Lezárás" onAction="#onFinalizeOrderClick" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-font-weight: bold;"/>
                 </HBox>
@@ -148,6 +149,5 @@
                 <Button text="Kijelölt törlése" onAction="#onDeleteCategoryClick" style="-fx-background-color: #f44336; -fx-text-fill: white;"/>
             </VBox>
         </Tab>
-
     </tabs>
 </TabPane>
